--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,9 +59,9 @@ div#loginToggle {
     display: inline-block;
 }
 
-.popup-form input {
-    width: 200px;
-}
+    .popup-form input {
+        width: 200px;
+    }
 
     .popup-form label {
         width: 150px;
@@ -70,4 +70,16 @@ div#loginToggle {
 
     .popup-form input[type=checkbox], .popup-form input[type=submit] {
         width: auto;
+    }
+
+menu li {
+    display: inline;
+}
+
+    menu li::after {
+        content: ' |';
+    }
+
+    menu li:last-of-type::after {
+        content: "";
     }
