--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DutchTreat.Controllers
+@using DutchTreat.ViewModels //this is going to import the namespace into all of the Views
 @addTagHelper"*, Microsoft.AspNetCore.Mvc.TagHelpers"
 
