--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using DutchTreat.Controllers
-@using DutchTreat.ViewModels //this is going to import the namespace into all of the Views
+@using DutchTreat.ViewModels 
 @addTagHelper"*, Microsoft.AspNetCore.Mvc.TagHelpers"
 
