add TagHelper to show all the errors after a validation

--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Contact Us";
 }
 <form method="post">
+    <div asp-validation-summary="All"></div>
     <label asp-for="Name" >Your Name:</label>
     <br />
     <input type="text" asp-for="Name" />
