create a @RednderSection called Scripts because we dont' wanna include the jquery-validation scripts in all the pages but only in the Contact.cshtml

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,5 +23,6 @@
 
     <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="~/js/index.js"></script>
+    @RenderSection("scripts")
 </body>
 </html>
