--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿input, textarea {
+﻿
+/*input, textarea {
     color: dimgray;
     width: 500px;
 }
@@ -82,4 +83,4 @@ menu li {
 
     menu li:last-of-type::after {
         content: "";
-    }
+    }*/
