use bootstrap to style Contact Us form

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid">
         <nav class="navbar navbar-dark bg-dark navbar-expand-md">
             <h1 class="navbar-brand">Welcome to Dutch Treat</h1>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#theMenu">
