--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="row">
-    <div class="col-md-6 offset-1-md-3">
+    <div class="col-md-6 offset-md-3">
         <form>
             <div class="form-group">
                 <label asp-for="Username">Username</label>
