add some scripts in Shop View from clientapp/

--- a/Views/App/Shop.cshtml
+++ b/Views/App/Shop.cshtml
@@ -1,5 +1,15 @@
 ﻿@model IEnumerable<Product>
 @section Scripts {
-  
-} 
+@*Order of scripts counts!!!*@
+    <script src="~/clientapp/runtime-es2015.js"></script>
+    <script src="~/clientapp/runtime-es5.js"></script>
+    <script src="~/clientapp/polyfills-es2015.js"></script>
+    <script src="~/clientapp/polyfills-es5.js"></script>
+    <script src="~/clientapp/styles-es2015.js"></script>
+    <script src="~/clientapp/styles-es5.js"></script>
+    <script src="~/clientapp/vendor-es2015.js"></script>
+    <script src="~/clientapp/vendor-es5.js"></script>
+    <script src="~/clientapp/main-es2015.js"></script>
+    <script src="~/clientapp/main-es5.js"></script>
+}
 <h1>Shop</h1>
