build project and load app-component - so far so good!

--- a/Views/App/Shop.cshtml
+++ b/Views/App/Shop.cshtml
@@ -13,3 +13,5 @@
     <script src="~/clientapp/main-es5.js"></script>
 }
 <h1>Shop</h1>
+@*match the selector in app.components*@
+<the-shop></the-shop>
