--- a/ClientApp/app/shop/productList.component.html
+++ b/ClientApp/app/shop/productList.component.html
@@ -1,8 +1,8 @@
 ﻿<div class="row">
-    <div class="product-info col-md-4" *ngFor="let p of products">
+    <div class="product-info col-md-4 well well-sm" *ngFor="let p of products">
         <div class="card bg-light p-1 m-1">
             <img src="/img/{{p.artId}}.jpg" class="img-fluid" [alt]="p.title" />
-            <h3>{{p.category}} - {{p.size}}</h3>
+            <div class="product-name">{{p.category}} - {{p.size}}</div>
             <ul class="product-props">
                 <li><strong>Price</strong>: {{p.price | currency: "NZD":true}}</li>
                 <li><strong>Artist</strong>: {{p.artist}}</li>
