fix some style and layout

--- a/ClientApp/app/app.component.html
+++ b/ClientApp/app/app.component.html
@@ -5,7 +5,9 @@
     </div>
     <div class="col-md-3">
         <div class="card bg-light p-2" >
-           <the-cart></the-cart>
+            <div class="card-text">
+                <the-cart></the-cart>
+            </div>
         </div>
     </div>
 </div>
