--- a/ClientApp/app/shop/cart.component.html
+++ b/ClientApp/app/shop/cart.component.html
@@ -1,2 +1,20 @@
 ﻿<h3>Shopping Cart</h3>
-<div>Count: {{data.order.items.length}}</div>
+<div>#/Items: {{data.order.items.length}}</div>
+<table class="table table-sm table-hover" >
+    <thead>
+        <tr>
+            <td>Product</td>
+            <td>#</td>
+            <td>$</td>
+            <td>Total</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let o of data.order.items">
+            <td>{{o.productCategory}} - {{o.productTitle}}</td>
+            <td>{{o.quantity}}</td>
+            <td>{{o.unitPrice | currency: "NZD":true}}</td>
+            <td>{{(o.unitPrice * o.quantity) | currency: "NZD":true}}</td>
+        </tr>
+    </tbody>
+</table>
