--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid p-0">
         <nav class="navbar navbar-dark bg-dark navbar-expand-md">
             <h1 class="navbar-brand"><i class="fa fa-paint-brush"></i> Welcome to Dutch Treat</h1>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#theMenu">
@@ -32,7 +32,7 @@
             </div>
         </nav>
     </header>
-    <section class="container">
+    <section class="container-fluid m-2">
         <h2 class="text-center">@ViewBag.Title</h2>
         @RenderBody()
     </section>
