cut html code from app.component and copy it in shop.component.html..
...in app.component.html add router-outlet tag as a placeholder

--- a/ClientApp/app/app.component.html
+++ b/ClientApp/app/app.component.html
@@ -1,13 +1,2 @@
-﻿<div class="row">
-    <div class="col-md-9">
-        <h3>{{title}}</h3>
-        <product-list></product-list>
-    </div>
-    <div class="col-md-3">
-        <div class="card p-2 shopping-cart" >
-            <div class="card-text">
-                <the-cart></the-cart>
-            </div>
-        </div>
-    </div>
-</div>
+﻿<!-- placeholder used to load the components dinamically --> 
+<router-outlet></router-outlet>
