--- a/ClientApp/app/shop/cart.component.html
+++ b/ClientApp/app/shop/cart.component.html
@@ -19,4 +19,4 @@
         </tr>
     </tbody>
 </table>
-<a routerLink="/checkout" class="btn btn-success" *ngIf="data.order.items.length > 0">Checkout</a>
+<a routerLink="checkout" class="btn btn-success" *ngIf="data.order.items.length > 0">Checkout</a>
