--- a/ClientApp/app/checkout/checkout.component.html
+++ b/ClientApp/app/checkout/checkout.component.html
@@ -9,7 +9,7 @@
             <td>{{ (o.unitPrice * o.quantity)|currency:'USD':true }}</td>
         </tr>
     </table>
-    <div class="col-md-4 col-md-offset-8 text-right">
+    <div class="col-md-4 offset-8 text-right">
         <table class="table table-condensed">
             <tr>
                 <td class="text-right">Subtotal</td>
