--- a/ClientApp/app/login/login.component.html
+++ b/ClientApp/app/login/login.component.html
@@ -3,11 +3,12 @@
         <form (submit)="onLogin()">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" [(ngModel)]="creds.username"/>
+                <input type="text" class="form-control" name="username" [(ngModel)]="creds.username" #username="ngModel" required/>
+                <div class="text-danger" *ngIf="username.invalid && username.errors.required" >Username is required!</div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" [(ngModel)]="creds.password"/>
+                <input type="password" class="form-control" name="password" [(ngModel)]="creds.password" required/>
             </div>
             <div class="form-group">
                 <input type="submit" class="btn btn-success" value="Login" />
