--- a/ClientApp/app/login/login.component.html
+++ b/ClientApp/app/login/login.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <div class="col-md-4 offset-md-4">
-        <form (submit)="onLogin()">
+        <form (submit)="onLogin()" #theForm="ngForm" novalidate>
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" name="username" [(ngModel)]="creds.username" #username="ngModel" required/>
@@ -12,7 +12,7 @@
                 <div class="text-danger" *ngIf="password.touched && password.invalid && password.errors.required">Password is required!</div>
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-success" value="Login" />
+                <input type="submit" class="btn btn-success" value="Login" [disabled]="theForm.invalid"/>
                 <a routerLink="/" class="btn btn-default">Cancel</a>
             </div>
         </form>
