--- a/ClientApp/app/checkout/checkout.component.html
+++ b/ClientApp/app/checkout/checkout.component.html
@@ -1,6 +1,6 @@
 ﻿﻿<div class="row">
-    <div *ngIf="errorMessage" class="alert alert-warning" >{{errorMessage}}</div>
-    <h3>Confirm Order</h3>
+    <div *ngIf="errorMessage" class="alert alert-warning">{{errorMessage}}</div>
+    <div><h3>Confirm Order</h3></div>
     <table class="table table-bordered table-hover">
         <tr *ngFor="let o of data.order.items">
             <td><img src="/img/{{ o.productArtId }}.jpg" alt="o.productTitle" class="img-thumbnail checkout-thumb" /></td>
